--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@
 }
 
 .content{
-  max-width: 1220px;
+  max-width: calc(1220px + 50px * 2);
   padding: 0 50px;
   margin: 0 auto;
 }
@@ -75,3 +75,61 @@
   color: var(--color-orange);
   border-bottom: 2px solid var(--color-orange);
 } 
+
+.welcome{
+  padding: 60px 0;
+  background-color: var(--color-bg-light);
+}
+
+.welcome__content{
+  display: flex;
+  column-gap: 225px;
+  align-items: center;
+}
+
+.welcome__info{
+  max-width: 550px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 45px;
+}
+
+.welcome__title{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 50px;
+  color: var(--color-light-gray);
+}
+
+.welcome__title span{
+  color: var(--color-green);
+}
+
+.welcome__text{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 35px;
+  color: var(--color-gray);
+}
+
+.welcome__link{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 160px;
+  height: 44px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: var(--color-default-black);
+  border: 2px solid var(--color-orange);
+  border-radius: 10px;
+}
