--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
   --color-bg-light: #EDF2EC;
   --color-link: #010201;
   --color-default-black: #000000;
+  --color-defaul-white: #FFFFFF;
 }
 
 *{
@@ -23,6 +24,20 @@
   max-width: calc(1220px + 50px * 2);
   padding: 0 50px;
   margin: 0 auto;
+}
+
+.title{
+  font-family: 'Inika';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+}
+
+.info{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 
@@ -83,15 +98,13 @@
 
 .welcome__content{
   display: flex;
-  column-gap: 225px;
+  justify-content: space-between;
   align-items: center;
+  column-gap: 225px;
 }
 
 .welcome__info{
   max-width: 550px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
   row-gap: 45px;
 }
 
@@ -132,4 +145,39 @@
   color: var(--color-default-black);
   border: 2px solid var(--color-orange);
   border-radius: 10px;
+}
+
+.about{
+  padding: 90px 0;
+}
+
+.about__content{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 150px;
+}
+
+.about__info{
+  max-width: 605px;
+  row-gap: 40px;
+}
+
+.about__title{
+  max-width: 460px;
+  width: 100%;
+  color: var(--color-green);
+}
+
+.about__title span{
+  color: var(--color-orange);
+}
+
+.about__text{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  color: var(--color-gray);
 }
