--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@
   --color-link: #010201;
   --color-default-black: #000000;
   --color-defaul-white: #FFFFFF;
+  --color-border-light: #E3E1D5;
 }
 
 *{
@@ -39,11 +40,26 @@ button{
   line-height: 52px;
 }
 
+.button_light{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Inika';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 26px;
+  color: var(--color-orange);
+  border: 1px solid #E06733;
+  border-radius: 5px;
+}
+
 .info{
   width: 100%;
   display: flex;
   flex-direction: column;
 }
+
 
 .header{
   padding: 40px 0;
@@ -214,19 +230,8 @@ button{
 }
 
 .service__button{
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 160px;
   height: 50px;
-  font-family: 'Inika';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 26px;
-  color: var(--color-orange);
-  border: 1px solid #E06733;
-  border-radius: 5px;
 }
 
 .service__cards{
@@ -245,7 +250,7 @@ button{
   flex-direction: column;
   align-items: center;
   row-gap: 10px;
-  border: 1px solid #E3E1D5;
+  border: 1px solid var(--color-border-light);
   border-radius: 20px;
   overflow: hidden;
 }
@@ -266,4 +271,102 @@ button{
   font-size: 16px;
   line-height: 20px;
   color: var(--color-light-gray);
+}
+
+.prices{
+  padding: 40px 0 115px;
+}
+
+.prices__content{
+  display: flex;
+  justify-content: space-between;
+}
+
+.prices__left{
+  max-width: 330px;
+  width: 100%;
+  row-gap: 60px;
+}
+
+.prices__title{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 48px;
+  color: var(--color-default-black);
+}
+
+.prices__items{
+  padding: 35px 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 30px;
+  border: 1px solid var(--color-border-light);
+  border-radius: 20px;
+}
+
+.prices__item{
+  width: 100%;
+  padding: 17px 40px;
+  background-color: var(--color-bg-light);
+  border-radius: 20px;
+}
+
+.prices__item button{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 20px;
+  color: var(--color-default-black);
+  border: none;
+}
+
+.prices__item span{
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: #D9D9D9;
+  background-image: url(../assets/icons/arrow.svg);
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center;
+}
+
+.prices__right{
+  max-width: 455px;
+  width: 100%;
+  align-items: flex-end;
+  row-gap: 40px;
+}
+
+.prices__subtitle{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 50px;
+  text-align: right;
+  color: var(--color-default-black);
+}
+
+.prices__subtitle span{
+  color: var(--color-green);
+}
+
+.prices__link{
+  width: 160px;
+  height: 50px;
+  font-weight: 700;
+}
+
+.prices__link:hover{
+  background-color: var(--color-orange);
+  color: var(--color-defaul-white);
 }
